SampleWebBasic/SampleWebBasic/Kubernetes/sce-deploy-app-tokenized.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: __K8sAppName__
  labels:
    app: __K8sAppName__
spec:
  selector:
    matchLabels:
      app: __K8sAppName__
  template:
    metadata:
      labels:
        app: __K8sAppName__
    spec:
      containers:
      - name: __K8sAppName__
        image: __RepositoryImageName__
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: __K8sAppName__
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
  labels:
    app: __K8sAppName__
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: __K8sAppName__
