SampleWebBasic/SampleWebBasic/Kubernetes/sce-ingress-routes-nonssl.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: __K8sAppName__-route
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
#services NEED to be in the same namespace as the ingress, otherwise you'll get a 503
  rules:
  - http:
      paths:
      - path: __K8sAppRoute__
        backend:
          serviceName: __K8sAppName__
          servicePort: 80
